--- a/03-frontend/angular-ecommerce/angular.json
+++ b/03-frontend/angular-ecommerce/angular.json
@@ -38,6 +38,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -65,7 +66,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
