--- a/03-frontend/angular-ecommerce/angular.json
+++ b/03-frontend/angular-ecommerce/angular.json
@@ -38,7 +38,6 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-              
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -66,13 +65,7 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
-              ]
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
