--- a/03-frontend/angular-ecommerce/package.json
+++ b/03-frontend/angular-ecommerce/package.json
@@ -23,6 +23,9 @@
     "@angular/ssr": "^17.3.6",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@okta/okta-angular": "^6.4.0",
+    "@okta/okta-auth-js": "^7.7.0",
+    "@okta/okta-signin-widget": "^7.18.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
