--- a/02-backend/ecommerce/src/main/resources/application.properties
+++ b/02-backend/ecommerce/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=fa
 spring.datasource.username=ecommerceapp
 spring.datasource.password=ecommerceapp
 spring.jpa.open-in-view=false
-spring.data.rest.base-path=/api
+
 logging.level.root=warn
 spring.main.banner-mode=off
+spring.data.rest.base-path=/api
+
+allowed.origins=http://localhost:4200
+
+spring.data.rest.detection-strategy=ANNOTATED
