--- a/02-backend/ecommerce/src/main/resources/application.properties
+++ b/02-backend/ecommerce/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200
 
 spring.data.rest.detection-strategy=ANNOTATED
+
+okta.oauth2.client-id=0oahbt8s8oIC51iBL5d7
+okta.oauth2.issuer=https://dev-38231588.okta.com/oauth2/default
